syntax = "proto3";

package notebook.v1;

import "google/protobuf/timestamp.proto";

message Entry {
  int32 id = 1;
  string text = 2;
  string creator_id = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  google.protobuf.Timestamp delete_time = 6;
}

message ReadAuthorEntryRequest {
  int32 id = 1;
}

message ReadAuthorEntryResponse {
  Entry entry = 1;
}

message BeginNewEntryRequest {
  string text = 1;
}

message BeginNewEntryResponse {
  Entry entry = 1;
}

message WriteToEntryRequest {
  int32 id = 1;
  string text = 2;
}

message WriteToEntryResponse {
  Entry entry = 1;
}

message ListEntriesRequest {
  int32 page_size = 1;
  int32 page_token = 2;
}

message ListEntriesResponse {
  repeated Entry entries = 1;
  int32 next_page_token = 2;
  int32 total_size = 3;
  bool has_next_page = 4;
}

message DeleteEntryRequest {
  int32 id = 1;
}

message DeleteEntryResponse {
  Entry entry = 1;
}

message UnDeleteEntryRequest {
  int32 id = 1;
}

message UnDeleteEntryResponse {
  Entry entry = 1;
}

service NotebookService {
  rpc ReadAuthorEntry(ReadAuthorEntryRequest) returns (ReadAuthorEntryResponse) {}

  rpc BeginNewEntry(BeginNewEntryRequest) returns (BeginNewEntryResponse) {}

  rpc WriteToEntry(WriteToEntryRequest) returns (WriteToEntryResponse) {}

  rpc ListEntries(ListEntriesRequest) returns (ListEntriesResponse) {}

  rpc DeleteEntry(DeleteEntryRequest) returns (DeleteEntryResponse) {}

  rpc UndeleteEntry(UnDeleteEntryRequest) returns (UnDeleteEntryResponse) {}
}